tests/tooling/fixtures/native/execution/positive/switch_case_do_while_false_fallthrough_return.objc3
module SwitchCaseDoWhileFalseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      do {
        let marker = 0;
        marker = marker + 1;
      } while (false);
    case 2:
      return 42;
    default:
      return 7;
  }
}
